add security login using symfony 4

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,13 +1,24 @@
 security:
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
+    encoders:
+        App\Entity\User:
+          algorithm: bcrypt
+          cost: 12
     providers:
-        in_memory: { memory: ~ }
+      our_db_provider:
+        entity:
+           class: App\Entity\User
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
             anonymous: true
+            provider: our_db_provider
+            user_checker: App\Security\UserChecker
+            form_login:
+              login_path: login
+              check_path: login
 
             # activate different ways to authenticate
 
