--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -19,6 +19,7 @@ security:
             form_login:
               login_path: login
               check_path: login
+              #default_target_path: project
 
             # activate different ways to authenticate
 
