--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
         "jquery": "^3.3.1",
         "node-sass": "^4.11.0",
         "popper.js": "^1.14.7",
-        "sass-loader": "7.0.1"
+        "sass-loader": "7.0.1",
+        "select2": "^4.0.6-rc.1",
+        "startbootstrap-sb-admin": "^5.0.3"
     }
 }
