--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -32,6 +32,6 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-         - { path: ^/, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+         - { path: home, roles: IS_AUTHENTICATED_ANONYMOUSLY }
          - { path: ^/project, roles: ROLE_USER }
          - { path: ^/admin, roles: ROLE_ADMIN }
