--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "devDependencies": {
+        "@fortawesome/fontawesome-free": "^5.8.1",
         "@symfony/webpack-encore": "^0.22.0",
         "webpack-notifier": "^1.6.0"
     },
@@ -13,6 +14,7 @@
     },
     "dependencies": {
         "bootstrap": "^4.3.1",
+        "datatables.net-bs4": "^1.10.19",
         "font-awesome": "^4.7.0",
         "jquery": "^3.3.1",
         "node-sass": "^4.11.0",
