--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     },
     "dependencies": {
         "bootstrap": "^4.3.1",
+        "bootstrap-multiselect": "^0.9.13-1",
         "datatables.net-bs4": "^1.10.19",
         "font-awesome": "^4.7.0",
         "jquery": "^3.3.1",
+        "jquery-ui": "^1.12.1",
+        "jquery.easing": "^1.4.1",
         "node-sass": "^4.11.0",
         "popper.js": "^1.14.7",
         "sass-loader": "7.0.1",
