--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "jquery": "^3.3.1",
         "jquery-ui": "^1.12.1",
         "jquery.easing": "^1.4.1",
+        "layui-src": "^2.4.5",
         "node-sass": "^4.11.0",
         "popper.js": "^1.14.7",
         "sass-loader": "7.0.1",
