--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "build": "encore production --progress"
     },
     "dependencies": {
+        "babel-polyfill": "^6.26.0",
         "bootstrap": "^4.3.1",
         "bootstrap-multiselect": "^0.9.13-1",
         "datatables.net-bs4": "^1.10.19",
